--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -591,6 +591,7 @@
       return {
         tposs: [],
         currencyOptions: [
+          'sats',
           'USD',
           'EUR',
           'GBP',
@@ -1009,7 +1010,8 @@
       itemFormatPrice(price, id) {
         const tpos = id.split(':')[0]
         const currency = _.findWhere(this.tposs, {id: tpos}).currency
-        return LNbits.utils.formatCurrency(Number(price).toFixed(2), currency)
+
+        return this.formatAmount(price, currency)
       },
       openItemDialog(id) {
         const [tposId, itemId] = id.split(':')
@@ -1154,10 +1156,7 @@
           id: tpos.wallet
         })
         data.forEach(item => {
-          item.formattedPrice = LNbits.utils.formatCurrency(
-            Number(item.price).toFixed(2),
-            tpos.currency
-          )
+          item.formattedPrice = this.formatAmount(item.price, tpos.currency)
         })
         this.fileDataDialog.data = data
         this.fileDataDialog.count = data.length
@@ -1174,6 +1173,16 @@
       openUrlDialog(id) {
         this.urlDialog.data = _.findWhere(this.tposs, {id})
         this.urlDialog.show = true
+      },
+      formatAmount: function (amount, currency) {
+        if (currency == 'sats') {
+          return LNbits.utils.formatSat(amount) + ' sat'
+        } else {
+          return LNbits.utils.formatCurrency(
+            Number(amount).toFixed(2),
+            currency
+          )
+        }
       }
     },
     created: function () {
