--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -957,7 +957,7 @@
                 self.atmToken
             }
             this.connectionWithdraw = new WebSocket(self.withdrawUrl)
-            this.connectionWithdraw.onmessage = (e) => {
+            this.connectionWithdraw.onmessage = e => {
               if (e.data == 'paid') {
                 dialog.show = false
                 self.atmPin = null
@@ -1352,6 +1352,9 @@
 
         // active only in the the PoS mode, not in the Cart mode or ATM pin
         if (!this.showPoS || this.atmBox) return
+
+        // prevent weird behaviour when setting round tip
+        if (this.tipDialog.show) return
 
         const {key} = event
         if (key >= '0' && key <= '9') {
