--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -229,7 +229,6 @@
                               </q-btn-dropdown>
                             </div>
                           </div>
-
                           <div class="row items-center no-wrap q-mb-md">
                             <div class="col-12">
                               <q-table
@@ -240,6 +239,17 @@
                                 :columns="itemsTable.columns"
                                 :pagination.sync="itemsTable.pagination"
                               >
+                                <template v-slot:header="props">
+                                  <q-tr :props="props">
+                                    <q-th
+                                      v-for="col in props.cols"
+                                      :key="col.name"
+                                      :props="props"
+                                    >
+                                      ${ col.label }
+                                    </q-th>
+                                  </q-tr>
+                                </template>
                                 <template v-slot:body="props">
                                   <q-tr :props="props">
                                     <q-td auto-width>
@@ -270,6 +280,9 @@
                                     <q-td key="price" :props="props">
                                       ${itemFormatPrice(props.row.price,
                                       props.row.id)}
+                                    </q-td>
+                                    <q-td key="tax" :props="props">
+                                      ${props.row.tax}%
                                     </q-td>
                                     <q-td key="disabled" :props="props">
                                       ${props.row.disabled}
@@ -438,7 +451,32 @@
             max="1"
           ></q-input>
         </template>
-
+        <q-list>
+          <q-expansion-item
+            expand-separator
+            icon="inventory"
+            label="Tax settings"
+            caption="Only applicable when using items/products"
+          >
+            <q-card>
+              <q-card-section>
+                Tax Inclusive means the unit price includes tax. (default)
+                <br />
+                Tax Exclusive means tax is applied on top of the unit price.
+              </q-card-section>
+              <q-card-section>
+                <q-toggle
+                  v-model="formDialog.data.tax_inclusive"
+                  :label="formDialog.data.tax_inclusive ? 
+                                'Tax Inclusive' :
+                                'Tax Exclusive'"
+                  ><q-tooltip>
+                    <span v-text="'Applies to all products'"></span> </q-tooltip
+                ></q-toggle>
+              </q-card-section>
+            </q-card>
+          </q-expansion-item>
+        </q-list>
         <div class="row q-mt-lg">
           <q-btn
             v-if="formDialog.data.id"
@@ -508,6 +546,7 @@
           dense
           v-model.number="itemDialog.data.tax"
           label="Tax %"
+          :hint="`${itemDialog.taxInclusive ? 'Tax is included on unit price' : 'Tax is added on top of unit price'}. You can change behaviour on TPoS settings.`"
         ></q-input>
         <q-checkbox
           v-model="itemDialog.data.disabled"
@@ -892,6 +931,12 @@
               field: 'price'
             },
             {
+              name: 'tax',
+              align: 'left',
+              label: 'Tax',
+              field: 'tax'
+            },
+            {
               name: 'disabled',
               align: 'left',
               label: 'Disabled',
@@ -1070,6 +1115,7 @@
       openItemDialog(id) {
         const [tposId, itemId] = id.split(':')
         const tpos = _.findWhere(this.tposs, {id: tposId})
+
         if (itemId) {
           const item = tpos.itemsMap.get(id)
           this.itemDialog.data = {
@@ -1079,6 +1125,7 @@
         } else {
           this.itemDialog.data.tpos = tposId
         }
+        this.itemDialog.taxInclusive = tpos.tax_inclusive
         this.itemDialog.data.currency = tpos.currency
         this.itemDialog.show = true
       },
@@ -1139,6 +1186,10 @@
           })
       },
       updateTposItems(tposId, wallet, data) {
+        const tpos = _.findWhere(this.tposs, {id: tposId})
+        if (tpos.tax_inclusive != this.taxInclusive) {
+          data.tax_inclusive = this.taxInclusive
+        }
         LNbits.api
           .request(
             'PUT',
@@ -1150,6 +1201,7 @@
             this.tposs = _.reject(this.tposs, obj => {
               return obj.id == tposId
             })
+            console.log(response.data)
             this.tposs.push(mapTPoS(response.data))
             this.closeItemDialog()
           })
