--- a/static/components/item-list/item-list.html
+++ b/static/components/item-list/item-list.html
@@ -1,4 +1,4 @@
-<div style="margin-bottom: 150px">
+<div style="margin-bottom: 200px">
   <q-separator></q-separator>
   <q-list separator padding>
     <q-item v-for="item in items" :key="item.id" class="q-py-md">
@@ -44,7 +44,7 @@
 
       <q-item-section side>
         <div class="text-grey-8 q-gutter-sm">
-          <q-btn round color="primary" icon="add" @click="addToCart(item)" />
+          <q-btn round color="green" icon="add" @click="addToCart(item)" />
         </div>
       </q-item-section>
     </q-item>
