--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -432,10 +432,9 @@
             dense
             v-model.number="formDialog.data.withdrawpremium"
             type="number"
-            label="Withdraw premium (0.00 to 1.00 %)"
+            label="Withdraw premium %"
             step="0.01"
             min="0"
-            max="1"
           ></q-input>
         </template>
 
